@@ -199,6 +199,11 @@ config NF_NAT
 
 	  To compile it as a module, choose M here.  If unsure, say N.
 
+config IPTABLES_SPEEDUP
+	bool "Speedup iptables defpath and dev tables. Backport from OpenWRT. 2.6.39 kernel."
+	depends on NF_NAT
+	default y
+
 config NF_NAT_NEEDED
 	bool
 	depends on NF_NAT
